# random_times_VRP_versions

./: README.md  pyproject.toml
data/preprocess/inputs/: Bog-poligonos-localidades.geojson  CoordenadasInstancias.csv  bogota_uber_geo.json  datosTito.csv  limites_geojson.json
new_Instances/: HHC_100_1.csv  HHC_100_10.csv  HHC_100_11.csv  HHC_100_12.csv  HHC_100_13.csv  HHC_100_14.csv  HHC_100_15.csv  HHC_100_16.csv  HHC_100_17.csv  HHC_100_18.csv  HHC_100_19.csv  HHC_100_2.csv  HHC_100_20.csv  HHC_100_21.csv  HHC_100_22.csv  HHC_100_23.csv  HHC_100_24.csv  HHC_100_25.csv  HHC_100_26.csv  HHC_100_27.csv  HHC_100_28.csv  HHC_100_29.csv  HHC_100_3.csv  HHC_100_4.csv  HHC_100_5.csv  HHC_100_6.csv  HHC_100_7.csv  HHC_100_8.csv  HHC_100_9.csv  HHC_15_1.csv  HHC_15_2.csv  HHC_15_3.csv  HHC_15_4.csv  HHC_15_5.csv  HHC_200_10.csv  HHC_200_11.csv  HHC_200_12.csv  HHC_200_13.csv  HHC_200_14.csv  HHC_200_15.csv  (+34 more)
notebooks/: predict.ipynb  preprocess.ipynb  train.ipynb
src/: utils.py
