[tool.poetry]
name = "hhcrsp"
version = "0.1.0"
description = ""
authors = ["fabiancastano <fabian.castano@frubana.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.16.0"
hyperopt = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
